fixed image size

--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -94,7 +94,7 @@
                     <li>$gdb info proc mappings</li>
                     <br>
                     This will start a gdb shell, set a breakpoint in the program (at whatever function you named), then run the program as a child process of gdb, and stop execution of the child once the breakpoint has been reached. Since the process is loaded in memory and its execution has paused, we can view its VAS layout with the gdb command <i>“info proc mappings”.</i> The source code for the binary used is shown below, and was compiled on a 64-bit system with <i>gcc -m32 -mpreferred-stack-boundary=2 file_name.c -o prog_name:</i></p>
-                    <img src="../Images/lecture_note_images/stack-based-mem-corruption/figure3.png" alt="figure3">
+                    <img src="../Images/lecture_note_images/stack-based-mem-corruption/figure3.png" alt="figure3" width="360" height="480">
                     <p><i>figure 3</i></p>
 
                     <p class="lead section-lead">Stack Segment: </p>
