--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -115,12 +115,13 @@
                     <i>*Note:  if you’re rusty on x86 general-purpose registers or unfamiliar with the x86 ISA, here’s a reading recommendation: <a href="http://www.cs.virginia.edu/~evans/cs216/guides/x86.html">Guide to x86</a></i>
                     <br><br>
                     Looking back at the example program used in gdb earlier, if we were to pause execution right before foo1() returned, it’s stack would look similar to the following image:</p>
-                    <p>[INSERT IMG 4]</p>
+                    <img src="../Images/lecture_note_images/stack-based-mem-corruption/figure4.png" alt="figure4">
+                    <p><i>figure 4</i></p>
 
                     <p class="section-lead">The light-gray boxes represent main()’s stack frame, and the lower green boxes represent foo1()’s stack frame (RET denotes the Return Address).</p>
                     <br>
                     <br>
-                    
+
 
                     <p class="lead section-lead"><b>Classic Stack Buffer Overflow: </b></p>
                     <hr>
@@ -135,7 +136,8 @@
                     <p class="section-lead">In <i>func1</i> we have allocated a 32-byte buffer on the stack with the variable named <i>buf</i>. A call to Libc’s <i>fgets</i> function is then used to read a maximum of 64 bytes of data into <i>buf</i>. If fgets <i>fails</i> to read any data from stdin (unfamiliar with stdin or standard streams in general? Here’s a helpful link: <a href="http://bfy.tw/AoYs">Standard Streams</a>) then a NULL pointer is returned, in which case, the error variable is set to 1 and returned. Otherwise, error remains equal to 0 when returned. In this example program, we are interested in the fact that <i>fgets</i> has a size parameter of 64, but is reading data from stdin into a buffer of size 32. This means that we can overflow the buffer by 64 - 32 = 32 bytes. If we feed some ‘A’s as input to the program, this is what the stack segment will look like right after fgets returns but right before <i>func1</i> returns:
                     <br><br>
                     <i>*Note: main’s stack-frame is colored blue and func1’s is colored green.</i></p>
-                    <p>[INSERT IMG 6]</p>
+                    <img src="../Images/lecture_note_images/stack-based-mem-corruption/figure6.png" alt="figure6">
+                    <p><i>figure 6</i></p>
 
                     <p class="section-lead">As the diagram attempts to demonstrate, user input data is being written towards saved data on the stack, such as <i>func1’s</i> error variable and even main’s stack-frame. If we provide, say 33 bytes of input data, then we can overwrite the first byte of <i>func1’s error</i> variable. Since main assumes an error occurred if <i>func1’s</i> return value is nonzero, we can easily test for the buffer overflow by providing 33 bytes of data and checking if the program prints “Failed to read input data”.
                     <br><br>
@@ -182,7 +184,7 @@
                     <br><br>
                     Right before func1’s function epilogue, there’s four bolded instructions that check the canary value for any changes. First, the canary value is copied into the edx register. The edx register is then xor’d with a backup of the original canary value stored in the Data segment. If the xor results in 0, then the je ( jump if equal) instruction jumps execution flow to the function epilogue. However, if the xor result is non-zero, then __stack_chk_fail is called which ultimately exits the process. The diagram below depicts how the stack segment would look immediately after user input is written to the buffer:
                     <br>
-                    <i>*Note: that func1’s error variable and canary variable have moved to [ebp-0x2c] and [ebp-0x28] respectively. GCC has moved their place in the stack-frame to the other side of our buffer, out of write-direction. The reason for this is to prevent a function’s other local variables from being overwritten in the event of a buffer overflow. It’s kind of the equivalent of not looking down the barrel of a gun.</i></p>
+                    <i>*Note: that func1’s error variable and canary variable have moved to [ebp-0x2c] and [ebp-0x28] respectively. GCC has moved their place in the stack-frame to the other side of our buffer, out of write-direction. This is so they aren't overwritten in the event of a buffer overflow originating from that particular stack-frame. It’s like standing up-wind of a cattle farm, if you catch my 'drift'.</i></p>
 
                     <p>[INSERT IMG 13]</p>
                     <br>
